# ex3

./: .gitignore  .~lock.README.docx#  AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Makefile.bak  Player.cpp  Player.h  Reversi UML  Square.cpp  Square.h  compile.txt  main.cpp  makefile  sources.txt
Unit Test/: Reversi  makefile  sources.mk
Unit Test/gtest_src/gtest/: gtest-all.d  subdir.mk
Unit Test/src/: AIPlayer.d  Board.d  Game.d  GameLogic.d  HumanPlayer.d  Player.d  Square.d  subdir.mk
Unit Test/test/: gtest_main.d  subdir.mk  test_aiPlayer.d  test_board.d  test_gameLogic.d
etc/: מה אמור להיות כאן?
exe/: client_exe  server settings.txt  מה אמור להיות כאן?
include/: AIPlayer.h  Board.h  Game.h  GameLogic.h  HumanPlayer.h  Player.h  Square.h
src/: AIPlayer.cpp  Board.cpp  Game.cpp  GameLogic.cpp  HumanPlayer.cpp  Player.cpp  Square.cpp  main.cpp  makefile
src/client/: makefile
src/client/include/: Board.h  Client.h  ClientPlayer.h  Command.h  CommandManager.h  Game.h  GameLogic.h  HumanPlayer.h  JoinCommand.h  ListCommand.h  Player.h  RemotePlayer.h  SettingData.h  Square.h  StartCommand.h  clientPlayer.h
src/client/src/: AIPlayer.cpp  Board.cpp  Client.cpp  ClientPlayer.cpp  Command.cpp  CommandManager.cpp  Game.cpp  GameLogic.cpp  HumanPlayer.cpp  JoinCommand.cpp  ListCommand.cpp  Player.cpp  RemotePlayer.cpp  RemotePlayer.h  SettingData.cpp  Square.cpp  StartCommand.cpp  clientPlayer.cpp  main.cpp
src/client/test/: gtest_main.cpp  test_aiPlayer.h  test_board.cpp  test_gameLogic.cpp
src/server/: Server.cpp  Server.h  main.cpp
test/: gtest_main.cpp  test_aiPlayer.cpp  test_aiPlayer.h  test_board.cpp  test_board.h  test_gameLogic.cpp  test_gameLogic.h
